major changes + test cases